5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1771_672.log
== TEST (2019-05-29 23:16:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
int(input("numero inteiro positivo"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:18:52) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
int(input("numero inteiro positivo"))
n = [1]
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:26:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
int(input("numero inteiro positivo"))
int valores[n] = [1]
print(n)
-- ERROR:
File "XXXX", line 4
    int valores[n] = [1]
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:26:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
int(input("numero inteiro positivo"))
valores[n] = [1]
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:26:22) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
int(input("numero inteiro positivo"))
valores[n] = [1]
print(n)
-- EXECUTION TIME:
0.385668
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/672/main.py", line 4, in <module>
    valores[n] = [1]
NameError: name 'valores' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:27:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
int(input("numero inteiro positivo"))
valores[n] = [1]
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:27:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
int(input("numero inteiro positivo"))
valores[n] = []
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:43:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
int(input("numero inteiro positivo"))
j = valores[n] = []
print(valores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:48:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=int(input("numero inteiro positivo"))
numeros = list(range(n))
for j in numeros:
	numeros[n]=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:48:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=int(input("numero inteiro positivo"))
numeros = list(range(n))
for j in numeros:
	numeros[n]=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:50:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=int(input("numero inteiro positivo"))
v1= ones(n,dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:51:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=int(input("numero inteiro positivo"))
v1= ones(n,dtype=int)
print(v1)
-- EXECUTION TIME:
0.47014
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:51:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=int(input("numero inteiro positivo"))
v1= ones(n,dtype=int)
print(v1)
-- EXECUTION TIME:
0.597169
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
